--- a/decayPatterns.Rmd
+++ b/decayPatterns.Rmd
@@ -48,7 +48,7 @@ pmr_byStem <- AvgPMR_byStem(pmr) # average pmr for each stem and timepoint
 # decay fits
 #decayfits <- fit_all_curves(pmr, stemSamples) #this recalculates all the curve fits, uncomment if the data changes; for each species+size
 #write_csv(decayfits,"derived_data/decayfits.csv")
-decayfits <- read_csv("derived_data/decayfits2.csv")
+decayfits <- read_csv("derived_data/decayfits.csv")
 indx <- unique(stemSamples[,c("code","Binomial","size")])
 decayfits %>%
   left_join(indx) -> decayfits
@@ -107,6 +107,7 @@ makefig__compare_aic(decayfits) # output/figures/supplementary/compare_aic.pdf
 Figure 1. Wood species x decay params (weibull model)
 ```{r}
 makefig__decayfits(decayfits) # output/figures/maintext/decayfits.pdf
+
 ```
 ![](output/figures/maintext/decayfits.pdf)
 
