--- a/endoComp_explainDecay.Rmd
+++ b/endoComp_explainDecay.Rmd
@@ -10,8 +10,8 @@ output: github_document
 knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
 ```
 
-Load libraries, functions, data
-```{r load}
+Load libraries and functions
+```{r}
 
 #---------------------------#
 #libraries
@@ -34,11 +34,12 @@ library(rioja) #WA-PLS
 source('code/helper_fxns.R')
 sourceDir('code')
 
+```
+
+Load decay data, microbial community data, and residuals from "woodTraits_explainDecay.Rmd", and trait data
+```{r}
 #---------------------------#
 #data
-
-# stems in the study
-stemSamples <- load_stemSamples() # this function is in load_microbeData.R
 
 # stem mass
 initial_mass <- read_in_initial_mass()
@@ -48,34 +49,31 @@ pmr_byStem <- AvgPMR_byStem(pmr) # average pmr for each stem and timepoint
 stem.respVars <- list("time7", "time13", "time25", "time37","time59")
 
 # decay fits
-#decayfits <- fit_all_curves(pmr, stemSamples) #this recalculates all the curve fits, uncomment if the data changes; for each species+size
+stemSamples <- load_stemSamples() # this function is in load_microbeData.R
+#decayfits <- fit_all_curves(pmr, stemSamples) #this recalculates all the curve fits, uncomment if the data change; for each species+size
 #write_csv(decayfits,"derived_data/decayfits.csv")
 decayfits <- read_csv("derived_data/decayfits.csv")
 indx <- unique(stemSamples[,c("code","Binomial","size")])
 decayfits %>%
   left_join(indx) -> decayfits
-code.respVars <- list("k","t60","ne.r2", "alpha","beta","w.t60","w.r2") # weibull params: alpha = shape param, beta = scale param
+code.respVars <- list("w.t50","alpha","beta","w.r2") # weibull params: alpha = shape param, beta = scale param
 
-# wood traits
-#trait.data.l <- mergeTraitData() # all trait data
-traits.code <- trait.means_byCode(stemSamples, fill.densitybark = TRUE) # averaged by code; if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
-#trait.sds_byCode(stemSamples) # within code variation
-#trait.n_byCode(stemSamples) # number of code samples that were aggregated
-traits.stem <- trait.means_byStem(stemSamples) # averaged by codeStem
-#trait.sds_byStem(stemSamples) # within codeStem variation
-#trait.n_byStem(stemSamples) # number of codeStem samples that were aggregated
-
-# wood trait residuals (see `woodTraits_explainDecay.Rmd')
-result.traitsDecay <- doAnalysis_traits_explain_decayParams(decayfits, traits.code, code.respVars)
-traitResiduals.code <- result.traitsDecay$traitResiduals.code
-result.traitsPMR <- doAnalysis_traits_explain_pmr(pmr_byStem, traits.code, traits.stem, stem.respVars)
-traitResiduals.stem <- result.traitsPMR$traitResiduals.stem
-
-#microbes
+# microbes
 microb.data <- load_MicrobeCollection(stemSamples)
 taxAndFunguild <- microb.data$taxAndFunguild
 comm.otu <- microb.data$comm.otu
 seqSamples <- microb.data$seqSamples
+
+# residuals from 'woodTraits_explainDecay.Rmd'
+resids_explainDecay.list <- readRDS(file = "derived_data/resids_explainDecay_list.RData")
+
+# wood traits
+traits.code <- trait.means_byCode(stemSamples, fill.densitybark = TRUE) # averaged by code; if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
+traits.stem <- trait.means_byStem(stemSamples) # averaged by codeStem
+trait.order <- traitcol.order()
+traitVars <- c(trait.order$phys.cols, trait.order$nutr.cols)
+traitVars.stem <- trait.order$stem.trait.cols
+traitVars.cfract <- trait.order$cfract.cols
 
 ```
 
@@ -91,10 +89,27 @@ Filter community matrix to include only taxa that are present in a least 20% of 
 comm.otu.trimmed <- removeRareOTUs(comm.otu)
 ```
 
+Initalize lists to store results
+```{r}
+# save the objects that come out of makefig__...
+models_explainDecay.list <- list() 
+
+# save the plots that dig into models summary results
+plots_explainDecay.list <- list()
+
+```
+
+
+##########################################
+# Community predicts decay
+
 ## *Hyp (species+size-level)* Species+size-level (average) initial microbial community composition will predict variation in decay model fit (r2), rate (t70, k), and lagginess (alpha).
 ```{r, message = F, results = F}
-cvfit.results.code <- doAnalysis_endoComp_explainDecay(comm.otu, seqSamples, decayfits, code.respVars)
+cvfit.results.code <- doAnalysis_endoComp_explainDecay(comm.otu, seqSamples, decayfits, code.respVars,
+                                                       use.cache = T, save.cache = T)
 cvfit.results.code$prettyTabs # will merge this with the other summary table to export as a csv in the next chunk
+
+models_explainDecay.list[['comm-decay.code']] <- cvfit.results.code$prettyTabs
 ```
 
 None of the components are significant.
@@ -106,57 +121,42 @@ None of the components are significant.
 cvfit.results.stem <- doAnalysis_endoComp_explainPMR(comm.otu, pmr_byStem, stem.respVars)
 cvfit.results.stem$prettyTabs
 
-commTab <- maketab_endoComp_explain(cvfit.results.code, cvfit.results.stem, code.respVars, stem.respVars)
-write.csv(commTab, file="output/tables/supplementary/commcompsummary.csv")
+models_explainDecay.list[['comm-decay.stem']] <- cvfit.results.stem$prettyTabs
 ```
 
 Comp01 (of the non-trimmed community) is a significant predictor of percent mass remaining at 37 months. 
 
 
-Plot the distribution of WA-PLS scores
+Plot the distribution of WA-PLS scores. Just out of curiousity, I'd like to pull in OTU "niche" info from the boral analysis to see if there's a relationship between OTU WA-PLS scores and wood trait coeffient estimates. There's a weak negative relationship between an OTU's WA-PLS score and waterperc coefficient (slope=-2.3, p=.03), suggesting that OTUs that "prefer" high-water niche space are associated with less mass remaining at time37.
 ```{r}
-makefig__wapls_score_time37(cvfit.results.stem, taxAndFunguild) # output/figures/supplementary/wapls_score_time37.pdf
-```
-[](output/figures/supplementary/wapls_score_time37.pdf)
-
-Who is in the top and bottom 1%?
-```{r}
-otucats <- maketab__wapls_score_time37_otuCats(cvfit.results.stem, taxAndFunguild)
-otucats
-write.csv(otucats, file = "output/tables/supplementary/wapls_score_time37_otuCats.csv")
-```
-Many of the bottom 1% OTUs are classified as saprotrophs.  That makes sense since low WA-PLS scores indicate an association with high mass loss (i.e. less mass remaining) at time37.
-
-But saprotrophs are also found at many points along the gradient...
-```{r, message=FALSE, warning=FALSE}
-makefig__wapls_score_time37_otuCats(cvfit.results.stem, taxAndFunguild) # output/figures/supplementary/wapls_score_time37_otuCats.pdf
+plots_explainDecay.list[['comm-decay.stem']] <- makefig__wapls_score_time37(cvfit.results.stem,
+                                                                            taxAndFunguild)
+grid.arrange(plots_explainDecay.list[['comm-decay.stem']]$p1, 
+             plots_explainDecay.list[['comm-decay.stem']]$p2, ncol = 2)
 
 ```
-[](output/figures/supplementary/wapls_score_time37_otuCats.pdf)
 
-Is this because there is an underlying signature of wood traits on the initial microbial community that is driving the relationship between the community and the mass remaining after 37 months?  The next analysis ("Community+traits" as predictor) will test this formally. Just out of curiousity, I'd like to pull in OTU "niche" info from the boral analysis to see if there's a relationship between OTU WA-PLS scores and wood trait coeffient estimates.
+Is this because there is an underlying signature of wood traits on the initial microbial community that is driving the relationship between the community and the mass remaining after 37 months?  The next analysis (Community predicts decay residuals) will test this formally.
 
-Reminder of which wood traits were included in the best model to explain pmr at time37...
-[](output/figures/maintext/traits_explain_pmr.pdf)
-More water leads to less mass remaining; more P leads to more mass remaining
-
-Plot OTU wood trait estimates (from boral) versus signif WA-PLS score.
-```{r}
-makefig__wapls_score_time37_boral(cvfit.results.stem, taxAndFunguild) # output/figures/supplementary/wapls_score_time37_boral.pdf
-
-```
-[](output/figures/supplementary/wapls_score_time37_boral.pdf)
-There's a weak negative relationship between an OTU's WA-PLS score and waterperc coefficient (slope=-2.3, p=.03), suggesting that OTUs that "prefer" high-water niche space are associated with less mass remaining at time37.
 
 
 ##########################################
+# Community predicts decay residuals (already explained by trait/Cfraction)
 
-# Community+traits as a predictor
+# Slice 1: Exclude C fraction data
 
 ## *Hyp (species+size-level)* After accounting for variation in decay due to wood traits, average initial microbial communitiy compositions will predict variation in decay model fit (r2), rate (t70, k), and lagginess (alpha).
 ```{r, message=FALSE, results = F}
-cvfit.results.code <- doAnalysis_endoComp_explainDecayResids(comm.otu, seqSamples, decayfits, code.respVars, traitResiduals.code)
+resids_explainDecay.list$traits.code
+
+cvfit.results.code <- doAnalysis_endoComp_explainDecayResids(comm.otu, seqSamples, decayfits, 
+                                                             code.respVars, 
+                                                             traitResiduals.code = resids_explainDecay.list$traits.code,
+                                                             use.cache = T, save.cache = T)
 cvfit.results.code$prettyTabs
+
+models_explainDecay.list[['comm-decayResidtraits.code']] <- cvfit.results.code$prettyTabs
+
 ```
 
 Community data doesn't improve our understanding of decay rates (k, t70) or variation in decay rate (ne.r2) beyond what is known from the trait data.
@@ -164,16 +164,21 @@ Community data doesn't improve our understanding of decay rates (k, t70) or vari
 
 ## *Hyp (stem-level)* After accounting for variation in decay due to wood traits (no models with density, includes small-species level bark thickness), stem-specific initial microbial communitiy compositions will predict variation in percent mass loss, particularly in the early stages of decay.
 ```{r, message=FALSE, results = F}
-cvfit.results.stem <- doAnalysis_endoComp_explainPMRResids(comm.otu, pmr_byStem, stem.respVars, traitResiduals.stem)
+cvfit.results.stem <- doAnalysis_endoComp_explainPMRResids(comm.otu, 
+                                                           pmr_byStem, 
+                                                           stem.respVars, 
+                                                           traitResiduals.stem =
+                                                             resids_explainDecay.list$traits.stem)
 cvfit.results.stem$prettyTabs
+
+models_explainDecay.list[['comm-decayResidtraits.stem']] <- cvfit.results.stem$prettyTabs
 
 #Notes about how to interpret WA-PLS...
 #rand.t.test(fit.tr.t13.cv.nt) # comp2 has a signif pval, but...
 #screeplot(fit.tr.t13.cv.nt)
 #There are two cases where there's a large % decrease in model RMSE from Component 1 to Component 2. This happens when using the whole community dataset to predict trait residuals at time13 and time37. In both cases the cross-validated RMSE is way higher than the model RMSE for all the components, suggesting that even the first community component doesn't perform well on the leave-one-out validation dataset.  Also, the cross-validated R-squared values (correlation between the observed and predicted values from the "loo" validation dataset) show that the model fit decreases after Component 1.  If there were a global maximum such that we saw an increase in R2 after adding more Components then maybe we could interpret Component 2, but there is no evidence of a better fitting model with more components based on the cross-validation results.
 
-commTab <- maketab_endoComp_explain(cvfit.results.code, cvfit.results.stem, code.respVars, stem.respVars)
-write.csv(commTab, file="output/tables/supplementary/commcompsummary_traitresid.csv")
+
 
 ```
 
@@ -181,42 +186,173 @@ Community data doesn't improve our understanding of mass loss (pmr after 7, 13, 
 
 
 
-# Relationship between wood traits and community
+# Slice 2: Include C fraction data (and exclude small stems)
+
+## *Hyp (species+size-level)* After accounting for variation in decay due to wood C fractions, average initial microbial communitiy compositions will predict variation in decay model fit (r2), rate (t70, k), and lagginess (alpha).
+```{r, message=FALSE, results = F}
+cvfit.results.code <- doAnalysis_endoComp_explainDecayResids(comm.otu, seqSamples, decayfits, 
+                                                             code.respVars, 
+                                                             traitResiduals.code = resids_explainDecay.list$cfract.code,
+                                                             use.cache = T, save.cache = T)
+cvfit.results.code$prettyTabs
+
+models_explainDecay.list[['comm-decayResidcfract.code']] <- cvfit.results.code$prettyTabs
+
+```
+
+Community data doesn't improve our understanding of decay rates (k, t70) or variation in decay rate (ne.r2) beyond what is known from the C fraction data.
+
+
+## *Hyp (stem-level)* After accounting for variation in decay due to wood C fractions (no models with density, includes small-species level bark thickness), stem-specific initial microbial communitiy compositions will predict variation in percent mass loss, particularly in the early stages of decay.
+```{r, message=FALSE, results = F}
+cvfit.results.stem <- doAnalysis_endoComp_explainPMRResids(comm.otu, pmr_byStem, 
+                                                           stem.respVars, 
+                                                           traitResiduals.stem =
+                                                             resids_explainDecay.list$cfract.stem)
+cvfit.results.stem$prettyTabs
+
+models_explainDecay.list[['comm-decayResidcfract.stem']] <- cvfit.results.stem$prettyTabs
+
+```
+
+Community data doesn't improve our understanding of mass loss (pmr after 7, 13, 25, 37, and 59 months) beyond what is known from the C fraction data.
+
+
+##########################################
+# Relationship between wood traits and community --- GET RID OF THIS SECTION? Only look for signiture of traits in community comp if there are relationships between comp and decay.. there were none
+
+# Slice 1: Exclude C fraction data
 
 ## *Hyp (species+size-level)* Initial microbial communitiy compositions will covary with initial wood traits
 
 Use ordistep to find the best combination of traits to constrain variation in the endophyte community
 ```{r}
-makefigs__endoComp_woodTraits(comm.otu, seqSamples, traits.code) # output/figures/supplementary/dbRDA_code.pdf
+# mods <- doAnalysis_endoComp_woodTraits(comm.otu, seqSamples, traits.code, traitVars, 
+#                                        use.cache = T, save.cache = F,
+#                                        use.cache.ordi = T, save.cache.ordi = F,
+#                                        cfract = F)
+# 
+# # trimmed communities only 
+# curr.mod <- mods$mod.t.code
+# curr.data <- mods$datasets.t.code
+# 
+# # identify the predictor variables
+# tmp <- rownames(anova(curr.mod, by = "margin"))
+# xvars <- tmp[tmp != "Residual"]
+# xvars
+# curr.data$traits %>%
+#   select(xvars) -> xvars.mat
+# 
+# # total proportion constrained
+# extract_constrainedInertia_proport(curr.mod)
+# 
+# # do the varpart
+# part <- varpart(curr.data$comm, ~size, ~barkthick, ~ waterperc, data = xvars.mat)
+# part.df <- data.frame(part$part$fract[1:3,], xvars)
+# part.df
+
+# makefigs__endoComp_woodTraits(comm.otu, seqSamples, traits.code) # output/figures/supplementary/dbRDA_code.pdf
+# tab.list <- maketabs__endoComp_woodTraits(comm.otu, seqSamples, traits.code, use.cache = T)
+# tab.list
+# write.csv(tab.list$an.nt.code, file="output/tables/supplementary/dbRDAanova_nt_code.csv")
+# write.csv(tab.list$an.t.code, file="output/tables/supplementary/dbRDAanova_t_code.csv")
+
 
 ```
-[](output/figures/supplementary/dbRDA_code.pdf)
 
-Anova-like tables
+## *Hyp (stem-level)* Average initial microbial communitiy compositions will covary with initial wood traits
 ```{r}
-tab.list <- maketabs__endoComp_woodTraits(comm.otu, seqSamples, traits.code)
-tab.list
-write.csv(tab.list$an.nt.code, file="output/tables/supplementary/dbRDAanova_nt_code.csv")
-write.csv(tab.list$an.t.code, file="output/tables/supplementary/dbRDAanova_t_code.csv")
+
+# mods <- doAnalysis_endoComp_woodTraits.stem(comm.otu, traits.code, traits.stem)
+# 
+# # trimmed communities only 
+# curr.mod <- mods$mod.t.stem
+# curr.mod
+
+```
+
+
+# Slice 2: Include C fraction data (and exclude small stems)
+
+## *Hyp (species+size-level)* Initial microbial communitiy compositions will covary with initial wood traits
+
+Use ordistep to find the best combination of traits to constrain variation in the endophyte community
+```{r}
+# traitVars.cfract
+# mods <- doAnalysis_endoComp_woodTraits(comm.otu, seqSamples, traits.code, traitVars = traitVars.cfract, 
+#                                        use.cache = T, save.cache = F,
+#                                        use.cache.ordi = F, save.cache.ordi = F,
+#                                        cfract = T) # don't cache it will write over the one for traits
+# 
+# # trimmed communities only
+# curr.mod <- mods$mod.t.code
+# curr.data <- mods$datasets.t.code
+# 
+# # identify the predictor variables
+# curr.mod # none
 
 ```
 
 
 ## *Hyp (stem-level)* Average initial microbial communitiy compositions will covary with initial wood traits
 ```{r}
-makefigs__endoComp_woodTraits.stem(comm.otu, traits.code, traits.stem) # output/figures/supplementary/dbRDA_stem.pdf
+#makefigs__endoComp_woodTraits.stem(comm.otu, traits.code, traits.stem) # output/figures/supplementary/dbRDA_stem.pdf
 
 ```
 
-Anova-like tables
+
+##########################################
+# Print results
+
 ```{r}
 
-tab.list <- maketabs__endoComp_woodTraits.stem(comm.otu, traits.code, traits.stem)
-tab.list
-write.csv(tab.list$an.nt.stem, file="output/tables/supplementary/dbRDAanova_nt_stem.csv")
-write.csv(tab.list$an.t.stem, file="output/tables/supplementary/dbRDAanova_t_stem.csv")
+# save the objects that come out of makefig__...
+names(models_explainDecay.list)
+filenames<- paste0("output/tables/supplementary/wapls_", names(models_explainDecay.list),".csv")
+for(i in 1:length(models_explainDecay.list)){
+  write.csv(models_explainDecay.list[[i]], file = filenames[[i]])
+}
+
+# save the plots that dig into models summary results
+pdf(file = "output/figures/supplementary/wapls_pmr37.pdf")
+grid.arrange(plots_explainDecay.list$`comm-decay.stem`$p1,
+             plots_explainDecay.list$`comm-decay.stem`$p2, ncol = 2)
+dev.off()
 
 ```
 
+Show the relationship between pmr time37, sample water, and wapls
+```{r}
+samp.score <- cvfit.results.stem$cvfit.notrim$time37$T[,'Comp01']
+wapls.df <- data.frame(codeStem = names(samp.score), wapls= samp.score)
+wapls.df %>%
+  left_join(traits.stem) %>%
+  select(codeStem, wapls, waterperc) %>%
+  left_join(pmr_byStem) %>%
+  select(codeStem, wapls, waterperc, time37) -> df
+  
+p1 <- ggplot(df, aes(x = wapls, y = time37)) +
+  geom_point() +
+  ylab("Percent mass remaining after 3 yrs") + 
+  xlab("Endophyte Component 1") +
+  theme_classic()
 
+p2 <- ggplot(df, aes(x = wapls, y = waterperc)) +
+  geom_point() +
+  ylab("Wood water (%)") + 
+  xlab("Endophyte Component 1") +
+  theme_classic()
+
+p3 <- ggplot(df, aes(x = waterperc, y = time37)) +
+  geom_point() +
+  ylab("Percent mass remaining after 3 yrs") + 
+  xlab("Wood water (%)") +
+  theme_classic()
+
+pdf(file = "output/figures/maintext/water-comm-pmr37.pdf")
+grid.arrange(p1, p3, p2, ncol = 2)
+dev.off()
+
+
+```
 
