--- a/endoDiv_explainDecay.Rmd
+++ b/endoDiv_explainDecay.Rmd
@@ -10,7 +10,7 @@ output: github_document
 knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
 ```
 
-Load libraries, functions, data
+Load libraries, functions
 ```{r load}
 
 #---------------------------#
@@ -33,12 +33,12 @@ library(rioja) #WA-PLS
 #fxns
 source('code/helper_fxns.R')
 sourceDir('code')
+```
 
+Load data
+```{r}
 #---------------------------#
 #data
-
-# stems in the study
-stemSamples <- load_stemSamples() # this function is in load_microbeData.R
 
 # stem mass
 initial_mass <- read_in_initial_mass()
@@ -48,35 +48,31 @@ pmr_byStem <- AvgPMR_byStem(pmr) # average pmr for each stem and timepoint
 stem.respVars <- list("time7", "time13", "time25", "time37","time59")
 
 # decay fits
-#decayfits <- fit_all_curves(pmr, stemSamples) #this recalculates all the curve fits, uncomment if the data changes; for each species+size
+stemSamples <- load_stemSamples() # this function is in load_microbeData.R
+#decayfits <- fit_all_curves(pmr, stemSamples) #this recalculates all the curve fits, uncomment if the data change; for each species+size
 #write_csv(decayfits,"derived_data/decayfits.csv")
 decayfits <- read_csv("derived_data/decayfits.csv")
 indx <- unique(stemSamples[,c("code","Binomial","size")])
 decayfits %>%
   left_join(indx) -> decayfits
-colnames(decayfits)
-code.respVars <- list("k","t50","ne.r2", "alpha","beta","w.t50","w.r2") # weibull params: alpha = shape param, beta = scale param
+code.respVars <- list("w.t50","alpha","beta","w.r2") # weibull params: alpha = shape param, beta = scale param
 
-# wood traits
-#trait.data.l <- mergeTraitData() # all trait data
-traits.code <- trait.means_byCode(stemSamples, fill.densitybark = TRUE) # averaged by code; if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
-#trait.sds_byCode(stemSamples) # within code variation
-#trait.n_byCode(stemSamples) # number of code samples that were aggregated
-traits.stem <- trait.means_byStem(stemSamples) # averaged by codeStem
-#trait.sds_byStem(stemSamples) # within codeStem variation
-#trait.n_byStem(stemSamples) # number of codeStem samples that were aggregated
-
-# wood trait residuals (see `woodTraits_explainDecay.Rmd')
-result.traitsDecay <- doAnalysis_traits_explain_decayParams(decayfits, traits.code, code.respVars, use.cache = T)
-traitResiduals.code <- result.traitsDecay$traitResiduals.code
-result.traitsPMR <- doAnalysis_traits_explain_pmr(pmr_byStem, traits.code, traits.stem, stem.respVars, use.cache = T)
-traitResiduals.stem <- result.traitsPMR$traitResiduals.stem
-
-#microbes
+# microbes
 microb.data <- load_MicrobeCollection(stemSamples)
 taxAndFunguild <- microb.data$taxAndFunguild
 comm.otu <- microb.data$comm.otu
 seqSamples <- microb.data$seqSamples
+
+# residuals from 'woodTraits_explainDecay.Rmd'
+resids_explainDecay.list <- readRDS(file = "derived_data/resids_explainDecay_list.RData")
+
+# wood traits
+traits.code <- trait.means_byCode(stemSamples, fill.densitybark = TRUE) # averaged by code; if fill.densitybark == TRUE, then use small stem estimates to approximate large stem density and bark thickness
+traits.stem <- trait.means_byStem(stemSamples) # averaged by codeStem
+trait.order <- traitcol.order()
+traitVars <- c(trait.order$phys.cols, trait.order$nutr.cols)
+traitVars.stem <- trait.order$stem.trait.cols
+traitVars.cfract <- trait.order$cfract.cols
 
 ```
 
